kubernetes/applications/websites/ghost/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ghost
    labels:
        app: ghost
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ghost
    template:
        metadata:
            labels:
                app: ghost
        spec:
            containers:
            - name: ghost
              image: ghost:5.76.0
              imagePullPolicy: Always
              ports:
                - containerPort: 2368
              volumeMounts:
              - mountPath: /var/lib/ghost/content
                name: content
            volumes:
            - name: content
              persistentVolumeClaim:
                claimName: ghost-pvc
